--- a/css/style.css
+++ b/css/style.css
@@ -1821,3 +1821,9 @@ h1, h2, h3, h4, h5,
 @media (max-width: 991.98px) {
   .main-menu {
     display: none !important; } }
+
+
+.nav-font{
+  font-size: 1.1rem;
+  font-weight: 600;
+}
