--- a/scss/_site-blocks.scss
+++ b/scss/_site-blocks.scss
@@ -6,7 +6,7 @@
 	background: -o-linear-gradient(left, rgba(0,210,182,1) 0%, rgba(218,255,9,1) 100%);
 	background: -ms-linear-gradient(left, rgba(0,210,182,1) 0%, rgba(218,255,9,1) 100%);
 	background: linear-gradient(to right, rgba(0,210,182,1) 0%, rgba(218,255,9,1) 100%);
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00d2b6', endColorstr='#daff09', GradientType=1 );
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#407BFF', endColorstr='#daff09', GradientType=1 );
 }
 
 .site-blocks-cover {
