--- a/css/style.css
+++ b/css/style.css
@@ -78,14 +78,14 @@ h1, h2, h3, h4, h5,
     box-shadow: none !important; }
   .btn.btn-primary {
     border-width: 2px;
-    background: #00d2b5;
-    border-color: #00d2b5;
+    background: #407BFF;
+    border-color: #407BFF;
     color: #fff;
     -webkit-box-shadow: 0 4px 20px -5px rgba(0, 210, 181, 0.4);
     box-shadow: 0 4px 20px -5px rgba(0, 210, 181, 0.4); }
     .btn.btn-primary:hover {
       background: transparent;
-      border-color: #00d2b5;
+      border-color: #407BFF;
       color: #000; }
 
 .line-height-1 {
@@ -99,7 +99,7 @@ h1, h2, h3, h4, h5,
   border-radius: 30px;
   font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"; }
   .form-control:active, .form-control:focus {
-    border-color: #00d2b5; }
+    border-color: #407BFF; }
   .form-control:hover, .form-control:active, .form-control:focus {
     -webkit-box-shadow: none !important;
     box-shadow: none !important; }
@@ -253,7 +253,7 @@ h1, h2, h3, h4, h5,
   .ul-check.success li:before {
     color: #8bc34a; }
   .ul-check.primary li:before {
-    color: #00d2b5; }
+    color: #407BFF; }
 
 .select-wrap, .wrap-icon {
   position: relative; }
@@ -287,7 +287,7 @@ h1, h2, h3, h4, h5,
   .site-navbar .site-navigation .site-menu {
     margin-bottom: 0; }
     .site-navbar .site-navigation .site-menu .active {
-      color: #00d2b5;
+      color: #407BFF;
       display: inline-block;
       padding: 5px 20px; }
     .site-navbar .site-navigation .site-menu a {
@@ -301,7 +301,7 @@ h1, h2, h3, h4, h5,
         display: inline-block;
         text-decoration: none !important; }
         .site-navbar .site-navigation .site-menu > li > a:hover {
-          color: #00d2b5; }
+          color: #407BFF; }
     .site-navbar .site-navigation .site-menu .has-children {
       position: relative; }
       .site-navbar .site-navigation .site-menu .has-children > a {
@@ -323,7 +323,7 @@ h1, h2, h3, h4, h5,
         top: 100%;
         position: absolute;
         text-align: left;
-        border-top: 2px solid #00d2b5;
+        border-top: 2px solid #407BFF;
         -webkit-box-shadow: 0 2px 10px -2px rgba(0, 0, 0, 0.1);
         box-shadow: 0 2px 10px -2px rgba(0, 0, 0, 0.1);
         border-left: 1px solid #edf0f5;
@@ -360,7 +360,7 @@ h1, h2, h3, h4, h5,
           transition: 0s all;
           color: #343a40; }
         .site-navbar .site-navigation .site-menu .has-children .dropdown .active > a {
-          color: #00d2b5 !important; }
+          color: #407BFF !important; }
         .site-navbar .site-navigation .site-menu .has-children .dropdown > li {
           list-style: none;
           padding: 0;
@@ -382,7 +382,7 @@ h1, h2, h3, h4, h5,
             background: #f4f5f9;
             color: #25262a; }
       .site-navbar .site-navigation .site-menu .has-children:hover > a, .site-navbar .site-navigation .site-menu .has-children:focus > a, .site-navbar .site-navigation .site-menu .has-children:active > a {
-        color: #00d2b5; }
+        color: #407BFF; }
       .site-navbar .site-navigation .site-menu .has-children:hover, .site-navbar .site-navigation .site-menu .has-children:focus, .site-navbar .site-navigation .site-menu .has-children:active {
         cursor: pointer; }
         .site-navbar .site-navigation .site-menu .has-children:hover > .dropdown, .site-navbar .site-navigation .site-menu .has-children:focus > .dropdown, .site-navbar .site-navigation .site-menu .has-children:active > .dropdown {
@@ -462,12 +462,12 @@ h1, h2, h3, h4, h5,
       position: relative;
       color: #212529; }
       .site-mobile-menu .site-nav-wrap a:hover {
-        color: #00d2b5; }
+        color: #407BFF; }
     .site-mobile-menu .site-nav-wrap li {
       position: relative;
       display: block; }
       .site-mobile-menu .site-nav-wrap li .active {
-        color: #00d2b5; }
+        color: #407BFF; }
     .site-mobile-menu .site-nav-wrap .arrow-collapse {
       position: absolute;
       right: 0px;
@@ -550,15 +550,15 @@ h1, h2, h3, h4, h5,
 
 /* Blocks */
 .primary-gradient {
-  background: #00d2b6;
-  background: -moz-linear-gradient(left, #00d2b6 0%, #daff09 100%);
-  background: -webkit-gradient(left top, right top, color-stop(0%, #00d2b6), color-stop(100%, #daff09));
-  background: -webkit-linear-gradient(left, #00d2b6 0%, #daff09 100%);
-  background: -o-linear-gradient(left, #00d2b6 0%, #daff09 100%);
-  background: -ms-linear-gradient(left, #00d2b6 0%, #daff09 100%);
-  background: -webkit-gradient(linear, left top, right top, from(#00d2b6), to(#daff09));
-  background: linear-gradient(to right, #00d2b6 0%, #daff09 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00d2b6', endColorstr='#daff09', GradientType=1 ); }
+  background: #407BFF;
+  background: -moz-linear-gradient(left, #407BFF 0%, #daff09 100%);
+  background: -webkit-gradient(left top, right top, color-stop(0%, #407BFF), color-stop(100%, #daff09));
+  background: -webkit-linear-gradient(left, #407BFF 0%, #daff09 100%);
+  background: -o-linear-gradient(left, #407BFF 0%, #daff09 100%);
+  background: -ms-linear-gradient(left, #407BFF 0%, #daff09 100%);
+  background: -webkit-gradient(linear, left top, right top, from(#407BFF), to(#daff09));
+  background: linear-gradient(to right, #407BFF 0%, #daff09 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#407BFF', endColorstr='#daff09', GradientType=1 ); }
 
 .site-blocks-cover {
   background-size: cover;
@@ -875,7 +875,7 @@ h1, h2, h3, h4, h5,
     font-weight: bold;
     color: #cccccc; }
     .site-block-tab .nav-item > a:hover, .site-block-tab .nav-item > a.active {
-      border-bottom: 2px solid #00d2b5;
+      border-bottom: 2px solid #407BFF;
       color: #000; }
 
 .block-13, .slide-one-item {
@@ -961,7 +961,7 @@ h1, h2, h3, h4, h5,
       border-radius: 50%;
       background: #dee2e6; }
     .slide-one-item .owl-dots .owl-dot.active span {
-      background: #00d2b5; }
+      background: #407BFF; }
 
 .block-12 {
   position: relative; }
@@ -1016,7 +1016,7 @@ h1, h2, h3, h4, h5,
         width: 80px;
         height: 4px;
         margin-top: -4px;
-        background: #00d2b5;
+        background: #407BFF;
         top: 0; }
       .block-12 .text .text-inner .heading {
         font-size: 20px;
@@ -1039,7 +1039,7 @@ h1, h2, h3, h4, h5,
     display: block;
     border-radius: 50%;
     opacity: 1;
-    color: #00d2b5 !important; }
+    color: #407BFF !important; }
     .block-16 figure .play-button:hover {
       opacity: 1; }
     .block-16 figure .play-button > span {
@@ -1077,7 +1077,7 @@ h1, h2, h3, h4, h5,
   color: #999999; }
 
 .block-25 ul li a .meta {
-  color: #00d2b5; }
+  color: #407BFF; }
 
 .block-25 ul li a:hover img {
   opacity: .5; }
@@ -1106,7 +1106,7 @@ h1, h2, h3, h4, h5,
     position: absolute;
     width: 30px;
     height: 30px;
-    background: #00d2b5;
+    background: #407BFF;
     border-radius: 50%;
     color: #fff; }
     .player .team-number > span {
@@ -1141,7 +1141,7 @@ h1, h2, h3, h4, h5,
     border-radius: 50%;
     border: 1px solid #ccc; }
   .site-block-27 ul li.active a, .site-block-27 ul li.active span {
-    background: #00d2b5;
+    background: #407BFF;
     color: #fff;
     border: 1px solid transparent; }
 
@@ -1235,7 +1235,7 @@ h1, h2, h3, h4, h5,
     position: relative;
     border-radius: 50%;
     display: inline-block;
-    background-color: #00d2b5;
+    background-color: #407BFF;
     -webkit-box-shadow: 0 4px 20px -5px rgba(0, 210, 181, 0.4);
     box-shadow: 0 4px 20px -5px rgba(0, 210, 181, 0.4); }
     .unit-4 .unit-4-icon .icon-wrap span {
@@ -1262,14 +1262,14 @@ h1, h2, h3, h4, h5,
   .unit-4 *:last-child {
     margin-bottom: 0; }
   .unit-4:hover {
-    background: #00d2b5;
+    background: #407BFF;
     -webkit-box-shadow: 0 4px 20px -5px rgba(0, 210, 181, 0.4);
     box-shadow: 0 4px 20px -5px rgba(0, 210, 181, 0.4);
     top: -7px; }
     .unit-4:hover .icon-wrap {
       background-color: #fff; }
       .unit-4:hover .icon-wrap span {
-        color: #00d2b5 !important; }
+        color: #407BFF !important; }
     .unit-4:hover h3 {
       color: #fff; }
     .unit-4:hover p {
@@ -1298,7 +1298,7 @@ h1, h2, h3, h4, h5,
   margin-top: -100px; }
 
 .feature-1, .free-quote, .feature-3 {
-  background: #00d2b5;
+  background: #407BFF;
   padding: 30px 50px;
   color: rgba(255, 255, 255, 0.6);
   font-size: 15px; }
@@ -1366,7 +1366,7 @@ h1, h2, h3, h4, h5,
     bottom: 0;
     width: 80px;
     height: 3px;
-    background: #00d2b5; }
+    background: #407BFF; }
   .border-primary.text-center:after {
     left: 50%;
     -webkit-transform: translateX(-50%);
@@ -1400,7 +1400,7 @@ h1, h2, h3, h4, h5,
 .how-it-work-item .number {
   width: 50px;
   height: 50px;
-  background: #00d2b5;
+  background: #407BFF;
   color: #fff;
   line-height: 55px;
   font-weight: 300;
@@ -1455,7 +1455,7 @@ h1, h2, h3, h4, h5,
   line-height: 40px;
   border-radius: 50%;
   display: inline-block;
-  background: #00d2b5;
+  background: #407BFF;
   color: #fff; }
 
 .custom-pagination span {
@@ -1514,7 +1514,7 @@ h1, h2, h3, h4, h5,
     -o-transition: .1s all ease;
     transition: .1s all ease; }
   .popular-category:hover {
-    background: #00d2b5;
+    background: #407BFF;
     -webkit-box-shadow: 0 5px 30px -5px rgba(0, 210, 181, 0.5);
     box-shadow: 0 5px 30px -5px rgba(0, 210, 181, 0.5); }
     .popular-category:hover .caption {
@@ -1565,7 +1565,7 @@ h1, h2, h3, h4, h5,
       font-size: 12px;
       display: inline-block;
       padding: 5px 30px;
-      background: #00d2b5;
+      background: #407BFF;
       border-radius: 30px;
       color: #fff;
       letter-spacing: .2em;
@@ -1603,7 +1603,7 @@ h1, h2, h3, h4, h5,
         color: #fff; }
 
 .accordion-item[aria-expanded="true"] {
-  color: #00d2b5; }
+  color: #407BFF; }
 
 .social-media {
   display: inline-block;
@@ -1636,7 +1636,7 @@ h1, h2, h3, h4, h5,
     display: inline-block;
     width: 50px;
     height: 50px;
-    background: #00d2b5;
+    background: #407BFF;
     margin-right: 1.5rem;
     border-radius: 50%;
     line-height: 50px;
@@ -1747,7 +1747,7 @@ h1, h2, h3, h4, h5,
 
 .section-sub-title {
   font-size: 13px;
-  color: #00d2b5;
+  color: #407BFF;
   letter-spacing: .2em;
   text-transform: uppercase; }
 
@@ -1877,17 +1877,17 @@ h1, h2, h3, h4, h5,
 }
 #generic_price_table .generic_content .generic_feature_list ul li:hover{
 	background-color: #E4E4E4;
-	border-left: 5px solid #00d2b6;
+	border-left: 5px solid #407BFF;
 }
 
 #generic_price_table .generic_content .generic_price_btn a{
-	border: 1px solid #00d2b6; 
-    color: #00d2b6;
+	border: 1px solid #407BFF; 
+    color: #407BFF;
 } 
 
 #generic_price_table .generic_content.active .generic_head_price .generic_head_content .head_bg,
 #generic_price_table .generic_content:hover .generic_head_price .generic_head_content .head_bg{
-	border-color: #00d2b6 rgba(0, 0, 0, 0) rgba(0, 0, 0, 0) #00d2b6;
+	border-color: #407BFF rgba(0, 0, 0, 0) rgba(0, 0, 0, 0) #407BFF;
 	color: #fff;
 }
 
@@ -1898,7 +1898,7 @@ h1, h2, h3, h4, h5,
 
 #generic_price_table .generic_content:hover .generic_price_btn a,
 #generic_price_table .generic_content.active .generic_price_btn a{
-	background-color: #00d2b6;
+	background-color: #407BFF;
 	color: #fff;
 } 
 #generic_price_table{
@@ -2116,7 +2116,7 @@ h1, h2, h3, h4, h5,
 	transition: all 0.3s ease-in-out 0s;
 }
 #generic_price_table_home .emerald{
-	background: #00d2b6;
+	background: #407BFF;
 	transition: all 0.3s ease-in-out 0s;
 }
 #generic_price_table_home .grey{
