--- a/css/style.css
+++ b/css/style.css
@@ -105,7 +105,7 @@ h1, h2, h3, h4, h5,
     box-shadow: none !important; }
 
 .site-section {
-  padding: 2.5em 0; }
+  padding-bottom: 2.5em; }
   @media (min-width: 768px) {
     .site-section {
       padding: 5em 0; } }
