--- a/css/style.css
+++ b/css/style.css
@@ -2140,7 +2140,7 @@ h1, h2, h3, h4, h5,
 	transition:all 0.3s ease-in-out 0s;
 }
 #generic_price_table_home .turquoise{
-	background: #1ABC9C;
+	background: #407BFF;
 	transition: all 0.3s ease-in-out 0s;
 }
 
