--- a/css/bootstrap/bootstrap-reboot.css
+++ b/css/bootstrap/bootstrap-reboot.css
@@ -111,7 +111,7 @@ sup {
   top: -.5em; }
 
 a {
-  color: #00d2b5;
+  color:  #407BFF;
   text-decoration: none;
   background-color: transparent;
   -webkit-text-decoration-skip: objects; }
