--- a/css/style.css
+++ b/css/style.css
@@ -1522,7 +1522,7 @@ h1, h2, h3, h4, h5,
     .popular-category:hover .icon {
       color: #fff; }
     .popular-category:hover .number {
-      background: #00b99f;
+      background: #407BFF;
       color: #fff; }
 
 @media (max-width: 1199.98px) {
