--- a/fonts/icomoon/style.css
+++ b/fonts/icomoon/style.css
@@ -1503,7 +1503,7 @@
 .icon-git:before {
   content: "\f1d3";
 }
-.icon-hacker-news:before {
+.icon-hacker- :before {
   content: "\f1d4";
 }
 .icon-y-combinator-square:before {
@@ -1584,7 +1584,7 @@
 .icon-yelp:before {
   content: "\f1e9";
 }
-.icon-newspaper-o:before {
+.icon- paper-o:before {
   content: "\f1ea";
 }
 .icon-wifi:before {
